--- a/style.css
+++ b/style.css
@@ -39,6 +39,35 @@ h1 {
     
 }
 
+.ligacao2 {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 200px;
+    left: 50%;
+    right: 50%;
+    margin-top: 8%;
+    transition: 0.3s ease-in-out;
+    
+}
+
+.ligacao3 {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 150px;
+    left: 85%;
+    right: 10%;
+    margin-top: -10%;
+    transition: 0.3s ease-in-out;
+    
+}
+
+.scroll-link {
+left: 50%;
+right: 50%
+}
+
 .ligacao:hover {
     transform: scale(1.1);
     cursor: pointer;
